Count pmap find operations with no corresponding node in tree
See logger _state.pmap_null_lookup

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -2605,12 +2605,13 @@ should include standard deviations
 \item Most figures will be generated with one particular big dataset
 \end{itemize}
 
-Probably want to integrate some measurements of the permutation map's effects:
+Probably want to integrate some measurements of the permutation map's effects
+(from Margo's email):
 \begin{itemize}
 \item How many times do we look up an item in the hash map that is not in the tree?
 
 \item When we do look up an item, how many times do we end up discarding
-      something we would have been unable to discard had we not done his.
+      something we would have been unable to discard had we not done this.
 
 \item How is the hash map growing over time?
 
