--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -68,3 +68,10 @@
  publisher = {Kluwer Academic Publishers},
  address = {Hingham, MA, USA}
 }
+
+@article{LarsonMaKiAn16,
+title={How We Analyzed the COMPAS Recidivism Algorithm},
+author="Jeff Larson, Surya Mattu, Lauren Kirchner and Julia Angwin",
+journal={ProPublica},
+year={2016}
+}
