Add some todo items and other notes from today's meeting

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -2536,6 +2536,7 @@ Test error for us and a few other algorithms
 (CART, C4.5, CBA, CMAR/CPAR, C5.0, Ripper, \dots),
 as a function of sparsity (number of rules) over 10 folds, for one big dataset (box plots).
 Also report algorithm runtimes (mean $\pm$ standard deviation over 10 folds).
+Also compare accuracies to random forests and boosted decision trees.
 
 \item Figure~\ref{fig:regularization}
 Missing:  Test error as a function of regularization and sparsity
