--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -78,7 +78,7 @@ year={2016}
 
 @incollection{sokolova:2003,
 title = {The Decision List Machine},
-author = {Marina Sokolova and Marchand, Mario and Nathalie Japkowicz and John Shawe-Taylor},
+author = {Marina Sokolova and Mario Marchand and Nathalie Japkowicz and John Shawe-Taylor},
 booktitle = {Advances in Neural Information Processing Systems 15},
 editor = {S. Becker and S. Thrun and K. Obermayer},
 pages = {945--952},
