--- a/paper/content.tex
+++ b/paper/content.tex
@@ -2609,7 +2609,8 @@ University of California, Berkeley.
 
 \begin{figure}[t!]
 \begin{center}
-\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
+%\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
+\includegraphics[width=0.75\textwidth]{figs/compare-compas.pdf}
 \end{center}
 \caption{Comparison with other methods:
 Test error for us and a few other algorithms
@@ -2677,7 +2678,7 @@ as a function of wall clock time.
 
 \begin{figure}[t!]
 \begin{center}
-\includegraphics[width=0.8\textwidth]{figs/ela-queue.png}
+\includegraphics[width=0.8\textwidth]{figs/ela_compas-queue.pdf}
 \end{center}
 \caption{Logical queue composition.
 }
@@ -2687,7 +2688,7 @@ as a function of wall clock time.
 \begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.65\textwidth]{figs/sketch-objective.png}
-\includegraphics[width=0.8\textwidth]{figs/ela-objective.png}
+\includegraphics[width=0.8\textwidth]{figs/ela_compas-objective.pdf}
 \end{center}
 \caption{Objective value as a function of wall clock time.
 %
@@ -2706,7 +2707,7 @@ Missing: horizontal lines and x-ticks for CART and C4.5.}
 \begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.65\textwidth]{figs/sketch-search-space.png}
-\includegraphics[width=0.8\textwidth]{figs/ela-remaining-space.png}
+\includegraphics[width=0.8\textwidth]{figs/ela_compas-remaining-space.pdf}
 \end{center}
 \caption{The logarithm (base 10) of an upper bound
 on the size of the remaining search space,
