--- a/paper/content.tex
+++ b/paper/content.tex
@@ -2652,7 +2652,7 @@ where X is a specific implementation
 \begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.65\textwidth]{figs/sketch-queue-size.png}
-\includegraphics[width=0.8\textwidth]{figs/ela-queue-cache-size-insertions.png}
+\includegraphics[width=0.8\textwidth]{figs/ela_compas-queue-cache-size-insertions.pdf}
 \end{center}
 \caption{Cache and queue data structure sizes and insertions.
 %
@@ -2727,18 +2727,18 @@ and the bottom plot highlights the verification phase.}
 \label{fig:search-space}
 \end{figure}
 
+%\begin{figure}[t!]
+%\begin{center}
+%%\includegraphics[width=0.65\textwidth]{figs/sketch-max-length.png}
+%\includegraphics[width=0.8\textwidth]{figs/ela-max-length-check.png}
+%\end{center}
+%\caption{Max prefix length over time (computed from objective value)}
+%\label{fig:max-length}
+%\end{figure}
+%
 \begin{figure}[t!]
 \begin{center}
-%\includegraphics[width=0.65\textwidth]{figs/sketch-max-length.png}
-\includegraphics[width=0.8\textwidth]{figs/ela-max-length-check.png}
-\end{center}
-\caption{Max prefix length over time (computed from objective value)}
-\label{fig:max-length}
-\end{figure}
-
-\begin{figure}[t!]
-\begin{center}
-\includegraphics[width=0.8\textwidth]{figs/ela-prefix-length.png}
+\includegraphics[width=0.8\textwidth]{figs/ela_compas-prefix-length.pdf}
 \end{center}
 \caption{Best prefix length over time}
 \label{fig:prefix-length}
