Intro in separate file

--- a/kdd/kdd17.tex
+++ b/kdd/kdd17.tex
@@ -140,10 +140,9 @@ ACM SIG Proceedings\footnote{This is an abstract footnote}.
 
 \keywords{ACM proceedings, \LaTeX, text tagging}
 
-
 \maketitle
 
-\citet{YangRuSe16}.
+\input{../paper/introduction}
 
 \section{Implementation}
 
