--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -1,28 +1,28 @@
-\documentclass[aoas,preprint]{imsart}
-\usepackage{fullpage}
-\setattribute{journal}{name}{}
-\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
-
-\usepackage{graphicx,verbatim}
-\usepackage[round]{natbib}
-\usepackage{url}
-\usepackage{amsmath,amssymb,amsthm,amsfonts}
-\usepackage{algorithm}
-\usepackage{algpseudocode}
-\usepackage{todonotes}
-\usepackage{subfig}
-\usepackage{dsfont}
-\usepackage{listings}
-\usepackage{comment}
-
-\usepackage{tikz}
-\usetikzlibrary{arrows}
-
-\input{latex_macros}
-\frenchspacing
-\hyphenation{speed-up}
-
-\begin{document}
+%\documentclass[aoas,preprint]{imsart}
+%\usepackage{fullpage}
+%\setattribute{journal}{name}{}
+%\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
+%
+%\usepackage{graphicx,verbatim}
+%\usepackage[round]{natbib}
+%\usepackage{url}
+%\usepackage{amsmath,amssymb,amsthm,amsfonts}
+%\usepackage{algorithm}
+%\usepackage{algpseudocode}
+%\usepackage{todonotes}
+%\usepackage{subfig}
+%\usepackage{dsfont}
+%\usepackage{listings}
+%\usepackage{comment}
+%
+%\usepackage{tikz}
+%\usetikzlibrary{arrows}
+%
+%\input{latex_macros}
+%\frenchspacing
+%\hyphenation{speed-up}
+%
+%\begin{document}
 
 \section{Introduction}
 
@@ -46,7 +46,7 @@ We evaluated BBRL??? on a number of publicly available datasets, and have made c
 
 This algorithm is designed for solving large (not massive) problems, where interpretability and certifiable optimality is important. A key example of the type of problems this algorithm is useful for is recidivism prediction. Thus, we work on the dataset released by Northpointe, who designed the proprietary COMPAS algorithm. We show that, at least on this sample of the data, it is possible to produce an certifiably optimal interpretable rule list that achieves the same accuracy as a random forest applied to this dataset. We thus see no reason why a proprietary algorithm should be used for recidivism prediction.
 
-\bibliographystyle{abbrvnat}
-\bibliography{refs}
-
-\end{document}
+%\bibliographystyle{abbrvnat}
+%\bibliography{refs}
+%
+%\end{document}
