--- a/paper/related_work.tex
+++ b/paper/related_work.tex
@@ -1,28 +1,28 @@
-\documentclass[aoas,preprint]{imsart}
-\usepackage{fullpage}
-\setattribute{journal}{name}{}
-\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
-
-\usepackage{graphicx,verbatim}
-\usepackage[round]{natbib}
-\usepackage{url}
-\usepackage{amsmath,amssymb,amsthm,amsfonts}
-\usepackage{algorithm}
-\usepackage{algpseudocode}
-\usepackage{todonotes}
-\usepackage{subfig}
-\usepackage{dsfont}
-\usepackage{listings}
-\usepackage{comment}
-
-\usepackage{tikz}
-\usetikzlibrary{arrows}
-
-\input{latex_macros}
-\frenchspacing
-\hyphenation{speed-up}
-
-\begin{document}
+%\documentclass[aoas,preprint]{imsart}
+%\usepackage{fullpage}
+%\setattribute{journal}{name}{}
+%\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
+%
+%\usepackage{graphicx,verbatim}
+%\usepackage[round]{natbib}
+%\usepackage{url}
+%\usepackage{amsmath,amssymb,amsthm,amsfonts}
+%\usepackage{algorithm}
+%\usepackage{algpseudocode}
+%\usepackage{todonotes}
+%\usepackage{subfig}
+%\usepackage{dsfont}
+%\usepackage{listings}
+%\usepackage{comment}
+%
+%\usepackage{tikz}
+%\usetikzlibrary{arrows}
+%
+%\input{latex_macros}
+%\frenchspacing
+%\hyphenation{speed-up}
+%
+%\begin{document}
 
 \section{Related Work}
 
@@ -79,7 +79,7 @@ Rule lists of various flavors have been developed recently such as Falling Rule 
 %ProPublica
 %	Certain problems require that the model used to solve that problem be interpretable as well as accurate. \citep{LarsonMaKiAn16} examines the problem of predicting recidivism and shows that a black box model, specifically the COMPAS score from the company Northpointe, has racially biased prediction. Black defendants are misclassified at a higher risk for recidivism than in actuality, while white defendants are misclassified at a lower risk. The model which produces the COMPAS scores is a black box algorithm which is not interpretable, and therefore the model does not provide a way for human input to correct for these racial biases. Our model produces similar accuracies to the logistic regression and COMPAS scores from \citep{LarsonMaKiAn16} while maintaining its interpretability.
 
-\bibliographystyle{abbrvnat}
-\bibliography{refs}
-
-\end{document}
+%\bibliographystyle{abbrvnat}
+%\bibliography{refs}
+%
+%\end{document}
