--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -22,6 +22,14 @@
 \frenchspacing
 \hyphenation{speed-up}
 
+\newtheorem{lemma}{Lemma}
+\newtheorem{theorem}{Theorem}
+\newtheorem{remark}{Remark}
+\newtheorem{definition}{Definition}
+\newtheorem{proposition}{Proposition}
+\newtheorem{claim}{Claim}
+\newtheorem{corollary}{Corollary}
+
 \includecomment{arxiv}\excludecomment{kdd}
 
 \begin{document}
