--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -29,40 +29,25 @@
 
 We will discuss related literature in several subfields.
 
-\textit{Interpretable Models:} There is a growing interest in interpretable (transparent, comprehensible) models because of practical societal importance\citep[see][]{ruping2006learning,bratko1997machine,dawes1979robust,VellidoEtAl12,Giraud98,Holte93,Schmueli10,Huysmans11,Freitas14}. There are now regulations on algorithmic decision-making in the European Union on the ``right to an explanation" \citep{Goodman2016EU} that would legally require interpretability in predictions.
+\textit{Interpretable Models:} There is a growing interest in interpretable (transparent, comprehensible) models because of practical societal importance\citep[see ][]{ruping2006learning,bratko1997machine,dawes1979robust,VellidoEtAl12,Giraud98,Holte93,Schmueli10,Huysmans11,Freitas14}. There are now regulations on algorithmic decision-making in the European Union on the ``right to an explanation" \citep{Goodman2016EU} that would legally require interpretability in predictions.
 
 
-%@article{goodman2016eu,
-%	Author = {Goodman, Bryce and Flaxman, Seth},
-%	Date-Added = {2016-08-23 19:16:57 +0000},
-%	Date-Modified = {2016-08-23 19:16:57 +0000},
-%	Journal = {arXiv preprint arXiv:1606.08813},
-%	Title = {EU regulations on algorithmic decision-making and a" right to explanation"},
-%	Year = {2016}}
-%
+\textit{Optimal Decision Tree Modeling}: The body of work closest to ours is possibly that of optimal decision tree modeling. There is work starting in the late 1990's on building optimal decision trees using optimization techniques \citep[e.g.,][]{Bennett96optimaldecision,dobkininduction}, continuing until the present \citep[e.g.,][]{FarhangfarGZ08}. 
+A particularly interesting paper along these lines is that of \citet{NijssenFromont2010}, who created a ``bottom-up" way to form optimal decision trees. Their method performs an expensive search step, mining all possible leaves (rather than all possible rules), and using those leaves to form trees. Their method can lead to memory problems, but it is possible that these memory issues can be mitigated using the theorems in this paper. \footnote{There is no public version of their code for distribution as of this writing.} Another work close to ours is that of \citet{GarofalakisHyRaSh00}, who introduce an algorithm to generate more interpretable decision trees by allowing constraints to be placed on the size of the decision tree. During tree construction, they bound the possible Minimum Description Length (MDL) cost of every different split at a given node. If every split at that node is more expensive than the actual cost of the current subtree, then that node can be pruned. In this way, they were able to prune the tree while constructing it instead of just constructing the tree and then pruning at the end. They do not aim for optimal trees; they build trees that obey constraints, and find optimal subtrees within the trees that were built during the building phase.
+%\textcolor{red}{Hm?} However, even with the added bounds, this approach does not generally yield globally optimal decision trees because they constrained the number of nodes in the tree.
 
-The body of work closest to ours is that on \textit{optimal decision tree modeling}. There is work starting in the late 1990's on building optimal decision trees using optimization techniques \citep[e.g.,][]{Bennett96optimaldecision,Auer95theoryand,dobkininduction}, continuing until the present \citep{e.g., farhangfar2008fast}. 
-%@inproceedings{farhangfar2008fast,
-%  title={A fast way to produce near-optimal fixed-depth decision trees},
-%  author={Farhangfar, Alireza and Greiner, Russell and Zinkevich, Martin},
-%  booktitle={Proceedings of the 10th international symposium on artificial intelligence and mathematics (ISAIM-2008)},
-%  year={2008},
-%  organization={Citeseer}
-%}
-A particularly interesting paper along these lines is that of \citet{NijssenFromont2010}, who created a ``bottom-up" way to form optimal decision trees. Their method performs an expensive search step, mining all possible leaves (rather than all possible rules), and using those leaves to form trees. Their method can lead to memory problems, but it is possible that these memory issues can be mitigated using the theorems in this paper. \footnote{There is no public version of their code for distribution as of this writing.} Another work close to ours is that of \citet{garofalakis:2000-kdd,garofalakis:2000-sigkdd,garofalakis:2003}, who introduce an algorithm to generate more interpretable decision trees by allowing constraints to be placed on the size of the decision tree. Like us, they use a branch-and-bound technique to constrain the size of the search space and limit the eventual size of the decision tree. During tree construction, they bound the possible Minimum Description Length (MDL) cost of every different split at a given node. If every split at that node is more expensive than the actual cost of the current subtree, then that node can be pruned. In this way, they were able to prune the tree while constructing it instead of just constructing the tree and then pruning at the end. \textcolor{red}{Hm?} However, even with the added bounds, this approach does not generally yield globally optimal decision trees because they constrained the number of nodes in the tree.
+\textit{Greedy splitting and pruning:} On the other end of the spectrum from optimal decision tree methods are methods like CART \citep{Breiman84} and C4.5 \citep{Quinlan93}. They do not perform exploration of the search space beyond greedy splitting. There are a huge number of algorithms in this class.
 
-On the other end of the spectrum from optimal decision tree methods are \textit{greedy splitting and pruning} methods like CART \cite{} and C4.5 \cite{}. They do not perform exploration of the search space beyond greedy splitting.
-
-There are \textit{Bayesian tree and rule list methods} that aim to explore the space of trees \cite{Dension:1998hl,Chipman:2002hc,Chipman10}, however, the space of trees of a given depth is much larger than the space of rule lists of that same level of depth, and the trees within these algorithms are grown in a top-down greedy way. Because of this, the authors noted that the MCMC chain tends to reach only locally optimal solutions. This is why Bayesian rule-based methods \citep{LethamRuMcMa15,YangRuSe16} have tended to be more successful in escaping local minima. This work builds specifically on that of \citet{YangRuSe16}. In particular, we use their fast bit-vector manipulations, and build on their bounds. 
+\textit{Bayesian tree and rule list methods}: Some of these methods that aim to explore the space of trees \citep{Dension:1998hl,Chipman:2002hc,Chipman10} using Monte Carlo exploration methods, however, the space of trees of a given depth is much larger than the space of rule lists of that same level of depth, and the trees within these algorithms are grown in a top-down greedy way. Because of this, the authors noted that the MCMC chain tends to reach only locally optimal solutions. This is why Bayesian rule-based methods \citep{LethamRuMcMa15,YangRuSe16} have tended to be more successful in escaping local minima. This work builds specifically on that of \citet{YangRuSe16}. In particular, we use their fast bit-vector manipulations, and build on their bounds. Note that the 1995 algorithm RIPPER \cite{ripper} is similar to the Bayesian tree methods in that it grows, prunes, and then locally optimizes.
 
 \textit{Rule learning methods:} 
-Most rule learning methods are not designed for optimality or interpretability, but mainly for computational speed and/or accuracy. In \textit{associative classification}, classifiers are formed either greedily from the top down as rule lists, \cite{Vanhoof10,Liu98,Li01,Yin03} or they are formed by taking the simple union of pre-mined rules \cite{??}, whereby any observation that fits into any of the rules is classified as positive \cite{??}. Inductive Logic Programming \cite{muggleton1994inductive} algorithms form disjunctive normal form patterns via a set of operations (rather than using optimization). These approaches are not appropriate for obtaining a guarantee of optimality. Methods for decision list learning construct rule lists iteratively in a greedy way
-\cite{Rivest87,Sokolova03,Anthony05,Marchand05,RudinLeMa13,Goessling2015}, which again have no guarantee on optimality, and tend not to produce optimal rule lists in general. Some methods allow for interpretations of single rules, without constructing rule lists \citep{McCormick:2011ws}.
+Most rule learning methods are not designed for optimality or interpretability, but mainly for computational speed and/or accuracy. In \textit{associative classification} \citep{Vanhoof10,Liu98,Li01,Yin03}, classifiers are often formed greedily from the top down as rule lists, or they are formed by taking the simple union of pre-mined rules, whereby any observation that fits into any of the rules is classified as positive. In \textit{inductive logic programming} \citep{muggleton1994inductive}, algorithms form disjunctive normal form patterns via a set of operations (rather than using optimization). These approaches are not appropriate for obtaining a guarantee of optimality. Methods for decision list learning construct rule lists iteratively in a greedy way
+\citep{Rivest87,Sokolova03,Marchand05,RudinLeMa13,Goessling2015}, which again have no guarantee on optimality, and tend not to produce optimal rule lists in general. Some methods allow for interpretations of single rules, without constructing rule lists \citep{McCormick:2011ws}.
 
 There is a tremendous amount of related work in other subfields that are too numerous to discuss at length here. We have not discussed \textit{rule mining} algorithms since they are part of an interchangeable preprocessing step for our algorithm, and are deterministically fast (that is, they will not generally slow our algorithm down). We also did not discuss methods that create disjunctive normal form models, e.g. logical analysis of data, and many associative classification methods). 
 
-There are \textit{related problems concerning interpretable lists of rules.}
-Rule lists of various flavors have been developed recently such as Falling Rule Lists \cite{WangRu}, which are constrained, as well as rule lists for dynamic treatment regimes \cite{ZhangEtAl15} and cost-sensitive dynamic treatment regimes \cite{LakkarajuRu17}. Both \cite{WangRu} and \cite{LakkarajuRu17} use Monte Carlo searches through the space of rule lists. The method proposed in this work could potentially be adapted to handle these kinds of interesting problems. We are currently working on bounds for Falling Rule Lists \cite{ChenRu17} similar to those presented here. 
+\textit{Related problems concerning interpretable lists of rules:} Beyond trees that are optimized for accuracy and sparsity, rule lists have been developed that have exotic types of constraints, and for various applications.
+This includes Falling Rule Lists \citep{WangRu15}, which are constrained to have decreasing probabilities down the list, as well as rule lists for dynamic treatment regimes \citep{ZhangEtAl15} and cost-sensitive dynamic treatment regimes \citep{LakkarajuRu17}. Both \citet{WangRu15} and \citet{LakkarajuRu17} use Monte Carlo searches through the space of rule lists. The method proposed in this work could potentially be adapted to handle these kinds of interesting problems. We are currently working on bounds for Falling Rule Lists \citep{ChenRu17} similar to those presented here.
 
 
 
@@ -78,7 +63,6 @@ Rule lists of various flavors have been developed recently such as Falling Rule 
 
 %ProPublica
 %	Certain problems require that the model used to solve that problem be interpretable as well as accurate. \citep{LarsonMaKiAn16} examines the problem of predicting recidivism and shows that a black box model, specifically the COMPAS score from the company Northpointe, has racially biased prediction. Black defendants are misclassified at a higher risk for recidivism than in actuality, while white defendants are misclassified at a lower risk. The model which produces the COMPAS scores is a black box algorithm which is not interpretable, and therefore the model does not provide a way for human input to correct for these racial biases. Our model produces similar accuracies to the logistic regression and COMPAS scores from \citep{LarsonMaKiAn16} while maintaining its interpretability.
-
 
 %\bibliographystyle{abbrvnat}
 %\bibliography{refs}
