Delete repeated Rivest reference

--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -177,6 +177,6 @@ ACM SIG Proceedings\footnote{This is an abstract footnote}.
 %\input{samplebody-conf}
 
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{../paper/refs} 
+\bibliography{refs}
 
 \end{document}
