--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -29,7 +29,7 @@
 
 We will discuss related literature in several subfields.
 
-\textit{Interpretable Models:} There is a growing interest in interpretable (transparent, comprehensible) models because of practical societal importance\citep[see ][]{ruping2006learning,bratko1997machine,dawes1979robust,VellidoEtAl12,Giraud98,Holte93,Schmueli10,Huysmans11,Freitas14}. There are now regulations on algorithmic decision-making in the European Union on the ``right to an explanation" \citep{Goodman2016EU} that would legally require interpretability in predictions.
+\textit{Interpretable Models:} There is a growing interest in interpretable (transparent, comprehensible) models because of practical societal importance~\citep[see ][]{ruping2006learning,bratko1997machine,dawes1979robust,VellidoEtAl12,Giraud98,Holte93,Schmueli10,Huysmans11,Freitas14}. There are now regulations on algorithmic decision-making in the European Union on the ``right to an explanation" \citep{Goodman2016EU} that would legally require interpretability in predictions.
 
 
 \textit{Optimal Decision Tree Modeling}: The body of work closest to ours is possibly that of optimal decision tree modeling. There is work starting in the late 1990's on building optimal decision trees using optimization techniques \citep[e.g.,][]{Bennett96optimaldecision,dobkininduction}, continuing until the present \citep[e.g.,][]{FarhangfarGZ08}. 
