Figure tweaks for ablation

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -114,13 +114,15 @@ partitioned by prefix length.}
 \begin{figure}[t!]
 \begin{center}
 \begin{arxiv}
-\includegraphics[width=0.8\textwidth]{figs/ela_compas-queue.pdf}
+%\includegraphics[width=0.8\textwidth]{figs/ela_compas-queue.pdf}
+\includegraphics[width=0.8\textwidth]{figs/ela_compas_compare-queue.pdf}
 \end{arxiv}
 \begin{kdd}
-\includegraphics[width=0.5\textwidth]{figs/ela_compas-queue.pdf}
+%\includegraphics[width=0.5\textwidth]{figs/ela_compas-queue.pdf}
+\includegraphics[trim={30mm 10mm 20mm 10mm}, width=0.5\textwidth]{figs/ela_compas_compare-queue.pdf}
 \end{kdd}
 \end{center}
-\caption{Logical queue composition.
+\caption{Ablation experiment and logical queue composition.
 }
 \label{fig:queue}
 \end{figure}
