Note about using beepboop

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -123,6 +123,8 @@ partitioned by prefix length.}
 \end{kdd}
 \end{center}
 \caption{Ablation experiment and logical queue composition.
+Note the last experiment is incomplete and was run on a (different)
+machine with a large amount of memory.  Was using about 136GB RAM when terminated.
 }
 \label{fig:queue}
 \end{figure}
